headers/cmus.h

int clm_sound_samples(const char *arg);
int clm_sound_framples(const char *arg);
int clm_sound_data_location(const char *arg);
int clm_sound_length(const char *arg);
int clm_sound_comment_start(const char *arg);
int clm_sound_comment_end(const char *arg);
int clm_header_samples(void);
int clm_header_data_location(void);
int clm_header_comment_start(void);
int clm_header_comment_end(void);
int clm_header_true_length(void);
int clm_samples_to_bytes(int format, int size);
int clm_bytes_to_samples(int format, int size);
int clm_header_write(const char *name, int type, int srate, int chans, int loc, int size_in_samples, int format, const char *comment, int len);
int clm_header_aux_comment_start(int n);
int clm_header_aux_comment_end(int n);
int clm_mus_file_probe(const char *name);
int clm_mus_clipping(void);
int clm_mus_set_clipping(int new_value);
int clm_mus_header_writable(int type, int format);